--- a/package.json
+++ b/package.json
@@ -3,20 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-			"next": "^13.2.4",
-			"react": "^18.2.0",
-			"react-dom": "^18.2.0",
-			"styled-components": "^5.3.10",
-			"react-router-dom": "^6.2.1"
-    },
-    "devDependencies": {
-
+        "next": "^13.2.4",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.2.1",
+        "styled-components": "^5.3.10"
     },
     "scripts": {
-      "dev": "next dev",
-      "build": "next build && next export -o build/",
-      "start": "next start",
-      "lint": "next lint"
+        "dev": "next dev",
+        "build": "next build && next export -o build/",
+        "start": "next start",
+        "lint": "next lint"
     }
-  }
-  
+}
