--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@supabase/supabase-js": "^2.32.0",
         "next": "^13.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
